--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,12 @@
+<!--
+File: index.html
+Author: Sallai András
+Copyright: 2024, Sallai András
+Group: szit.hu
+Date: 2024-12-02
+Github: https://github.com/oktat/tesugarbeet
+Licenc: MIT
+-->
 
 <!DOCTYPE html>
 <html lang="hu">
